<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="12dp"
    android:paddingVertical="12dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/edit_jovem_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_jovem"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/Fechar"
            android:layout_width="30dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_close_button" />

    </LinearLayout>

    <EditText
        android:id="@+id/editNomeJovem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <CheckBox
            android:id="@+id/checkMonitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monitor"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkPatrulheiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patrulheiro"
            android:layout_weight="1"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <Button
            android:id="@+id/Salvar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:backgroundTint="@color/green"
            android:textSize="20sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/Excluir"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/excluir"
            android:backgroundTint="@color/grená"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
