<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="12dp"
    android:paddingVertical="12dp">

    <EditText
        android:id="@+id/editNomeNovoJovem"
        android:hint="@string/nome_do_novo_jovem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <Button
            android:id="@+id/btnSalvarNovoJovem"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:backgroundTint="@color/green"
            android:textSize="20sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/Cancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:backgroundTint="@color/grená"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
